--- a/EcommerceSite/EcommerceSite.csproj
+++ b/EcommerceSite/EcommerceSite.csproj
@@ -52,6 +52,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="wwwroot\images\categories\" />
     <Folder Include="wwwroot\images\gallery\" />
+    <Folder Include="wwwroot\images\Fabrica\" />
     <Folder Include="wwwroot\images\portfolio\" />
     <Folder Include="wwwroot\images\products\" />
   </ItemGroup>
